<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="permission">权限(permission)</string>
    <string name="no_permissions">应用需要必要的运行权限</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n</string>
    <string name="quit">退出</string>
    <string name="app_name">音乐</string>
    <string name="cd_overflow">更多选项</string>
    <string name="cd_bottom_action_bar_album_art">专辑图片</string>
    <string name="cd_repeat">重复一首或全部</string>
    <string name="cd_previous">前一首</string>
    <string name="cd_play">暂停/继续</string>
    <string name="cd_next">下一首</string>
    <string name="cd_shuffle">随机播放</string>
    <string name="menu_title">iHappy音乐播放器</string>
    <string name="menu_sig">让音乐愉悦您的心，天天iHappy</string>
    <string name="nowplaying">现在播放</string>
    <plurals name="Nalbums">

        
        <item quantity="one">1 张专辑</item>
        
        <item quantity="other"><xliff:g id="count">%d</xliff:g> 张专辑</item>
    </plurals>
    <plurals name="Nsongs">

        
        <item quantity="one">1 首歌曲</item>
        <item quantity="other"><xliff:g id="count">%d</xliff:g> 首歌曲</item>
    </plurals>
    <plurals name="NNNtrackstoplaylist">
        
        <item quantity="one">1 首歌曲添加到播放列表.</item>
        
        <item quantity="other"><xliff:g id="number" example="27">%d</xliff:g> 首歌曲添加到播放列表.</item>
    </plurals>
    <string name="durationformatshort" translatable="false">
        <xliff:g id="format">%2$d:%5$02d</xliff:g></string>
    <string name="durationformatlong" translatable="false">
        <xliff:g id="format">%1$d:%3$02d:%5$02d</xliff:g></string>
    <string name="album_header">专辑列表</string>
    <string name="track_header">曲目列表</string>
    <string name="settings">设置</string>
    <string name="shuffle_all">全部随机播放</string>
    <string name="share">分享</string>
    <string name="play_store">Play 商店</string>
    <string name="update_mediastore">刷新媒体库</string>
    <string name="set_as_ringtone">\"<xliff:g id="name" example="Alarm Bell">%s</xliff:g>\" 设置为手机铃声</string>
    <string name="rename_playlist">重命名播放列表</string>
    <string name="repeat_one">重复播放当前歌曲</string>
    <string name="repeat_all">重复播放所有歌曲</string>
    <string name="repeat_off">重复播放已关闭</string>
    <string name="shuffle_off">随机播放已关闭</string>
    <string name="shuffle_on">随机播放已开启</string>
    <string name="now_listening_to">现在播放:</string>
    <string name="by">艺术家:</string>
    <string name="share_track_using">分享此曲目</string>
    <string name="play_all">全部播放</string>
    <string name="add_to_playlist">添加到播放列表</string>
    <string name="use_as_ringtone">设置为手机铃声</string>
    <string name="ringtone_menu_1" msgid="2737472190159134599">"用作卡1铃声"</string>
    <string name="ringtone_menu_2" msgid="2737472190159134599">"用作卡2铃声"</string>
    <string name="ringtone_menu" msgid="2737472190159134599">"用作手机铃声"</string>
    <string name="ringtone_set" msgid="5325818347613843130">"已将“<xliff:g id="NAME">%s</xliff:g>”设为手机铃声。"</string>
    <string name="ringtone_set_1" msgid="5325818347613843130">"已将“<xliff:g id="NAME">%s</xliff:g>”设为卡1铃声。"</string>
    <string name="ringtone_set_2" msgid="5325818347613843130">"已将“<xliff:g id="NAME">%s</xliff:g>”设为卡2铃声。"</string>
    <string name="drm_ringtone_error">Cannot set CD/SD files as ringtone</string>
    <string name="delete_playlist">删除播放列表</string>
    <string name="add_tracks_to_playlist">添加歌曲到播放列表</string>
    <string name="search">搜索音乐</string>
    <string name="real_remove">从本地存储中移除</string>
    <string name="remove">从播放列表中移除</string>
    <string name="image_edit_gallery">截取图库的图片</string>
    <string name="image_edit_file">默认显示文件原始图片</string>
    <string name="image_edit_lastfm">从last.fm取图像</string>
    <string name="image_edit_web">获取网络上相应的图片</string>
    <string name="image_edit_albums">唱片集菜单选择</string>
    <string name="image_edit_artists">艺术家菜单选择</string>
    <string name="image_edit_genre">音乐流派菜单选择</string>
    <string name="image_edit_playlist">播放列菜单选择</string>
    <string name="apollo_4x2">iHappyMusic</string>
    <string name="unknown">未知</string>
    <string name="about">关于 iHappyMusic</string>
    <string name="eqalizer">均衡器</string>
    <string name="settings_storage_category">Storage</string>
    <string name="header_interface">界面</string>
    <string name="themes">主题</string>
    <string name="apollo_themes">请选择相应的 iHappyMusic主题</string>
    <string name="more_themes">    其它 iHappyMusic主题</string>
    <string name="select_theme">更换主题</string>
    <string name="version">iHappyMusic 版本</string>
    <string name="tab_visibility_title">Tab标题的可见个数</string>
    <string name="tab_visibility_summary">请选择您要显示的标签</string>
    <string name="settings_delete_cache_title">删除缓存</string>
    <string name="settings_delete_cache_summary">清除所有缓存的图像</string>
    <string name="delete_warning">执行该操作将永久删除缓存的图像记录！</string>
    <string name="shanksong_warning">亲，您确定要开启摇甩换曲功能？</string>
    <string name="song_ShakeDetector">ShakeDetector</string>
    <string name="visualizer_title">音频可视化风格</string>
    <string name="visualizer_summary">提供播放音乐时的音频可视化显示效果</string>
	<string name="shanksong_title">摇一摇换曲子</string>
    <string name="shanksong_summary">可设置手机通过被摇晃而实现歌曲更换</string>
    <string name="erji_title">耳机监控</string>
    <string name="erji_summary">设置耳机拔出暂停音乐的播放以及耳机线控</string>
    <string name="widget_style_dark">完全昏暗</string>
    <string name="widget_style_light">整体光亮</string>
   <string name="shanksong_info">已开启摇甩换歌曲功能,并保存该操作记录！</string>
   <string name="shanksong_cancel">已取消摇甩换歌曲功能！</string>
   <string name="shanksong_sorry">您尚未开启该功能，无法进行取消操作！</string>
   <string name="erji_outstop">耳机被拔出，暂停播放！</string>
    <string name="apply_theme">应用主题</string>
    <string name="get_more_themes">下载更多主题</string>
    <string name="favorite">最喜爱的</string>
    <string name="queue">音乐队列</string>
    <string name="new_playlist">新建列表</string>
    <string name="save">存储</string>
    <string name="overwrite">覆盖</string>
    <string name="playlist_renamed">播放列表已重命名</string>
    <string name="tab_recent">最近播放</string>
    <string name="tab_artists">艺术家</string>
    <string name="tab_albums">专辑唱片</string>
    <string name="tab_songs">全部歌曲</string>
    <string name="tab_playlists">播放列表</string>
    <string name="tab_genres">音乐流派</string>
    <string name="key_themes" translatable="false">themepreview</string>
    <string name="key_themes_package" translatable="false">themePackageName</string>
    <string name="key_themes_preferences" translatable="false">themePrefences</string>
    <string name="key_build_version" translatable="false">build_version</string>
    <string name="key_tabs_enabled" translatable="false">tabs_enabled</string>
    <string name="key_visualization_type" translatable="false">visualization_type</string>
    <string name="key_shanksong" translatable="false">shank_song</string>
    <string name="key_erji" translatable="false">erji_action</string>
    <string name="visual_none">默认不显示</string>
    <string name="visual_bargraph">矩形块叠加显示</string>
    <string name="visual_solidbargraph">立体条形图风格</string>
    <string name="visual_waveform">波浪图风格</string>
    <string name="error">很抱歉，出错误啦！</string>
    <string name="exit_talking">再按一次返回键,可直接退出程序</string>
    <string name="splan_songs">首歌曲</string>
    <string name="all_add">已刷新乐库，共增添</string>
    <string name="had_add">亲，您已刷新乐库！</string>
    <string name="set_time">请输入睡眠时间的整分钟数(分)</string>
    <string name="Search">搜索</string>
    <string name="Yes">确定</string>
    <string name="cancel">取消</string>
    <string name="start">开启</string>
    <string name="sorry_tell">很抱歉，设置的时间不能为空！</string>
    <string name="should_time">很抱歉，设置的时间不能超过120分钟</string>
    <string name="cannot_time">亲，睡眠定时不能重复设置哟！</string>
    <string name="set_time_tittle">请选择睡眠等待时间</string>
    <string name="thanks_word">阅读完毕，感谢您对本软件的支持和使用！</string>
    <string name="play_external_question_msg">选择应用于: \n\n<b><xliff:g id="name">%s</xliff:g></b>的操作</string>
    <string name="play_external_question_button_play">播放</string>
    <string name="play_external_question_button_queue">队列</string>
    <string name="play_external_question_button_cancel">取消</string>
    <string name="play_external_error">无法播放文件</string>
    <string name="play_external_progress_msg">正在解析文件，请等待。</string>
    <string name="artist_page_title">" 艺术家: "</string>
    <string name="album_page_title">" 专辑: "</string>
    <string name="gridview_artist_text"><xliff:g id="artistname">%s</xliff:g> (<xliff:g id="number">%d</xliff:g>)</string>
    <string name="tracks_list_header_text">全部随机</string>
    <string name="search_list_header_text">歌曲(<xliff:g id="number">%d</xliff:g>)</string>
    <string name="tracks_of_bundle_title_text"><xliff:g id="titlename">%s</xliff:g></string>
    <string name="artist_num_of_ablums_text"><xliff:g id="position">%d</xliff:g>张专辑</string>
    <string name="artist_num_of_tracks_text"><xliff:g id="position">%d</xliff:g>首曲目</string>
    <string name="album_num_of_tracks_text"><xliff:g id="position">%d</xliff:g> 首曲目</string>
    <string name="playback_failed">该播放器不支持这种音频文件类型。</string>
    <string name="open_failed">"抱歉，无法打开文件"</string>
    <string name="repeat_current_notif">重复播放当前歌曲。</string>
    <string name="repeat_all_notif">重复播放所有歌曲。</string>
    <string name="shuffle_off_notif">随机播放已关闭。</string>
    <string name="shuffle_on_notif">随机播放已打开。</string>
    <string name="repeat_off_notif">重复播放已关闭。</string>
    <string name="add_to_favorite">已添加到“最喜爱的”歌曲播放列表。</string>
    <string name="delete_to_favorite">已从“最喜爱的”歌曲播放列表删除。</string>
    <string name="topbar_page_title_0">歌曲</string>
    <string name="topbar_page_title_1">专辑</string>
    <string name="topbar_page_title_2">艺术家</string>
    <string name="topbar_page_title_3">播放列表</string>
    <string name="topbar_return_text">返回</string>
    <string name="bottombar_defaultsongname">请选择播放歌曲</string>
    <string name="bottombar_defaultartist">"未知"</string>
    <string name="playactivity_list">列表</string>
    <string name="playactivity_more">更多</string>
    <string name="play_shuffle_open">随机播放开</string>
    <string name="play_shuffle_close">随机播放关</string>
    <string name="play_repeat_close">重复关</string>
    <string name="play_repeat_all">重复全部</string>
    <string name="play_repeat_single">重复单曲</string>
    <string name="play_current_time">00:00</string>
    <string name="play_total_time">00:00</string>
    <string name="emptyplaylist">您选的播放列表是空的。</string>
    <string name="widget_initial_text">请选择播放歌曲</string>
    <string name="playlists_list_header_text">新建播放列表</string>
    <string name="search_hint_text">搜索</string>
    <string name="search_btn_textview_text">搜索</string>
    <string name="update_btn_textview_text">刷新</string>
    <string name="unknown_artist_name">未知艺术家</string>
    <string name="add_song_to_queue_list">添加歌曲</string>
    <string name="add_tracks_to_queue_finish_textview_text">完成</string>
    <string name="add_tracks_to_queue_select_all_textview_text">全部</string>
    <string name="add_tracks_to_queue_select_tracks_textview_text">选择歌曲</string>
    <string name="title_playing">播放中</string>
    <string name="play_list">播放列表</string>
    <string name="performer">表演者</string>
    <string name="song">歌曲</string>
    <string name="album">专辑</string>
	<string name="drm_right_expired">DRM rights expired</string>
	<string name="tracks_list_header_title_text">全部随机</string>
	<string name="searchbar_cancel_text">取消</string>
	<string name="playlist_title">新建列表</string>
	<string name="playlist_pmp">请为此列表输入名称</string>
	<string name="playlist_hint">名称</string>
	<string name="playlist_cancel">取消</string>
	<string name="playlist_save">存储</string>
	<string name="playlist_name_too_long">播放列表名称不能超过17个字符</string>
    <string name="please_select_a_track">请选择一首歌曲</string>
    <string name="resource_not_exist">请重新选择歌曲</string>
    <string name="first_track_of_random_trackist">已是当前随机列表第一首歌曲</string>
    <string name="file_type_not_surportable">不支持该文件格式</string>
</resources>